--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "paper-checkbox": "PolymerElements/paper-checkbox#^1.0.0",
     "paper-styles": "PolymerElements/paper-styles#^1.0.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.0",
+    "iron-icons": "PolymerElements/iron-icons#^1.0.0",
     "marked-element": "PolymerElements/marked-element#^1.0.0",
     "prism-highlighter": "PolymerElements/prism-highlighter#1.0.0",
     "polymer": "Polymer/polymer#^1.0.0"
