--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "polymer-demo-transmogrifier",
   "version": "1.0.0",
-  "description": "Code snipped and rendered demo Voltron element",
+  "description": "Code snippet and rendered demo Voltron element",
   "authors": [
     "The Polymer Authors"
   ],
@@ -20,7 +20,7 @@
     "url": "git://github.com/notwaldorf/polymer-demo-transmogrifier.git"
   },
   "license": "http://polymer.github.io/LICENSE.txt",
-  "homepage": "https://github.com/notwaldorf/olymer-demo-transmogrifier",
+  "homepage": "https://github.com/notwaldorf/polymer-demo-transmogrifier",
   "ignore": [],
   "dependencies": {
     "paper-styles": "PolymerElements/paper-styles#^1.0.0",
