--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "polymer-demo-transmogrifier",
+  "name": "demo-snippet",
   "version": "1.0.0",
   "description": "Code-and-demo snippet element",
   "authors": [
@@ -32,7 +32,6 @@
   },
   "devDependencies": {
     "paper-checkbox": "PolymerElements/paper-checkbox#^1.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
   }
 }
