--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "demo-snippet",
   "version": "1.0.0",
-  "description": "Code-and-demo snippet element",
+  "description": "Polymer element that renders both the source and demo of a code snippet",
   "authors": [
     "The Polymer Authors"
   ],
