--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Polymer element that renders both the source and demo of a code snippet",
   "authors": [
-    "The Polymer Authors"
+    "Monica Dinculescu <noms@google.com>"
   ],
   "keywords": [
     "web-components",
@@ -18,7 +18,6 @@
     "type": "git",
     "url": "git://github.com/notwaldorf/polymer-demo-transmogrifier.git"
   },
-  "license": "http://polymer.github.io/LICENSE.txt",
   "homepage": "https://github.com/notwaldorf/polymer-demo-transmogrifier",
   "ignore": [],
   "dependencies": {
